# mysql-api

./: .gitignore  Dockerfile  README.md  __pyproject.toml  api.py  app.py  create-mongo-docker-container.sh  gehaltApi.py  infos.txt  jsonEncoder.py  pyproject.toml  rest.http  run.sh  update.sh
api/: base.py  salary.py
backend/: base.py  baseMongo.py  decimalCodec.py  endpoint.py  expenses.py  insurances.py  mapping.py  pensions.py  salary.py
openapi/: openapi.yml  swagger.yaml
