[tool.poetry]
name = "mysql-api"
version = "0.1.0"
description = ""
authors = ["Joerg"]

[tool.poetry.dependencies]
python = "^3.7"
PyMySQL = "^1.0.2"
connexion = {extras = ["swagger-ui"], version = "^2.7.0"}
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
